--- a/css/bear.css
+++ b/css/bear.css
@@ -9,4 +9,25 @@ html {
 }
 
 /* Write your solution here */
+@media only screen and (max-width: 1196px) {
+  #bear {
+    float: left;
+    
+  }
+}
 
+
+
+
+
+.column {
+  width: 100%;
+  float: none;
+}
+
+@media only screen and (min-width: 600px) {
+  .column {
+    width: 33.333%;
+    float: left;
+  }
+}
