--- a/css/bear.css
+++ b/css/bear.css
@@ -11,8 +11,7 @@ html {
 /* Write your solution here */
 @media only screen and (max-width: 1196px) {
   #bear {
-    float: left;
-    max-width: 800px;
+    float: 800px left;
   }
 }
 
