--- a/css/bear.css
+++ b/css/bear.css
@@ -11,7 +11,7 @@ html {
 /* Write your solution here */
 @media only screen and (min-width: 1196px) {
   #bear {
-    float: 800px left;
+    left: 800px;
   }
 }
 
