--- a/css/monkey.css
+++ b/css/monkey.css
@@ -11,6 +11,7 @@ html {
 /* Write your solution here */
 @media only screen and (max-width: 1170px) and (min-width: 406px) {
   #monkey {
-    top: -100px;
+    top: 0;
+    right: 0;
   }
 }
