--- a/css/monkey.css
+++ b/css/monkey.css
@@ -11,7 +11,6 @@ html {
 /* Write your solution here */
 @media only screen and (max-width: 1170px) and (min-width: 406px) {
   #monkey {
-    top: 0;
-    right: 0;
+    top: -100px;
   }
 }
